# btc_stack_builder

./: .env.example  .gitignore  .pre-commit-config.yaml  DEPLOYMENT.md  Dockerfile  README.md  coverage.xml  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  security.yml
btc_stack_builder/: __init__.py  main.py
btc_stack_builder/config/: __init__.py
btc_stack_builder/core/: __init__.py  constants.py  logger.py  models.py  utils.py
btc_stack_builder/gateways/: __init__.py  binance_gateway.py  deribit_gateway.py
btc_stack_builder/risk/: __init__.py
btc_stack_builder/strategies/: __init__.py
config/: __init__.py  app.production.yaml  app.yaml
core/: logger.py
infra/postgres/: init.sql
infra/prometheus/: prometheus.yml
tests/: __init__.py  test_core.py  test_logger.py
