[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "btc_stack_builder"
version = "0.1.0"
description = "Autonomous Bitcoin accumulation bot with multiple trading strategies"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "BTC Stack Builder Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
    "Operating System :: OS Independent",
    "Private :: Do Not Upload"
]
dependencies = [
    "ccxt>=2.0.0",
    "websocket-client>=1.6.0",
    "requests>=2.31.0",
    "aiohttp>=3.8.5",
    "pydantic>=2.4.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.12.0",
    "redis>=5.0.0",
    "apscheduler>=3.10.0",
    "celery>=5.3.0",
    "flower>=2.0.0",
    "cryptography>=41.0.0",
    "python-dotenv>=1.0.0",
    "prometheus-client>=0.17.0",
    "grafana-api>=1.0.0",
    "python-telegram-bot>=20.3",
    "numpy>=2.1.0,<3.0",
    "pandas>=2.0.0",
    "python-dateutil>=2.8.2",
    "pytz>=2023.3",
    "tenacity>=8.2.0",
    "structlog>=24.0.0",
    "python-json-logger>=3.3.0",
    "pyyaml>=6.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "docker>=6.1.0",
    "watchdog>=3.0.0",
    "ruff>=0.1.0",
    "black>=23.9.1",
    "mypy>=1.5.1",
    "pre-commit>=3.4.0",
]

[project.scripts]
btc-stack-builder = "btc_stack_builder.main:main"

[tool.setuptools]
packages = ["btc_stack_builder"]

[tool.ruff]
target-version = "py313"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "C4",  # flake8-comprehensions
    "B",   # flake8-bugbear
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "S",   # flake8-bandit (security)
    "A",   # flake8-builtins
]
ignore = [
    "E203",  # Whitespace before ':'
    "E501",  # Line too long (handled by formatter)
]

[tool.ruff.isort]
known-first-party = ["btc_stack_builder"]

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--cov=btc_stack_builder --cov-report=term-missing"
asyncio_mode = "auto"
