[build-system]
requires = ["setuptools>=61.0", "wheel", "maturin>=1.6.0", "numpy>=2.1.0", "cython>=3.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "btc_stack_builder"
version = "0.1.0"
description = "Autonomous Bitcoin accumulation bot with multiple trading strategies"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "BTC Stack Builder Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
    "Operating System :: OS Independent",
    "Private :: Do Not Upload"
]
dependencies = [
    "aiohttp==3.12.11",
    "aiodns==3.1.1",
    "alembic==1.12.1",
    "apscheduler==3.11.0",
    "ccxt>=2.0.0",
    "celery==5.5.3",
    "cryptography==45.0.3",
    "flower==2.0.1",
    "grafana-api>=1.0.0",
    "numpy==2.3.0",
    "pandas==2.3.0",
    "prometheus-client==0.17.1",
    "psycopg2-binary==2.9.10",
    "pydantic==2.11.5",
    "pydantic-settings==2.9.1",
    "python-dateutil==2.8.2",
    "python-dotenv==1.1.0",
    "python-json-logger==3.3.0",
    "python-telegram-bot==20.6",
    "pytz==2023.3.post1",
    "pyyaml==6.0.2",
    "redis==5.0.1",
    "requests==2.32.3",
    "scipy==1.15.3",
    "sqlalchemy==2.0.41",
    "structlog==25.4.0",
    "tenacity==8.2.3",
    "websocket-client==1.8.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.9.1",
    "docker>=6.1.0",
    "mypy>=1.5.1",
    "pre-commit>=3.4.0",
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-cov==4.1.0",
    "pytest-mock==3.14.1",
    "ruff>=0.1.0",
    "watchdog>=3.0.0",
]

[project.scripts]
btc-stack-builder = "btc_stack_builder.main:main"

[tool.setuptools]
packages = ["btc_stack_builder"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "C4",  # flake8-comprehensions
    "B",   # flake8-bugbear
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "S",   # flake8-bandit (security)
    "A",   # flake8-builtins
]
ignore = [
    "E203",  # Whitespace before ':'
    "E501",  # Line too long (handled by formatter)
    "F401",  # Unused imports
    "S101",  # Use of assert statements
    "S105",  # Hardcoded passwords
    "S106",  # Hardcoded passwords in arg
]

[tool.ruff.lint.isort]
known-first-party = ["btc_stack_builder"]

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
ignore_errors = true
exclude = ["build/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-q"
asyncio_mode = "auto"
